--- a/index.html
+++ b/index.html
@@ -13,21 +13,11 @@
 
   </head>
   <body>
-    
+
     <main class="container">
-      <div class="con-qr-code">
-        <img src="images/img-qr.png" alt="img-qr">
-      </div>
-
-      <div class="heading">
-        <h1>Improve your front-end skills by building projects</h1>
-      </div>
-
-      <div class="paragraph">
-        <p>Scan the QR code to visit Frontend Mentor and 
-          take your coding skills to the next level
-        </p>
-      </div>
+      <img src="./images/img-qr.png" alt="QR Code Frontend Mentor" >
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
 
   </body>
